syntax = "proto3";

option java_package = "com.example.grpc.proto";
option java_multiple_files = true;

service FieldAService {
  rpc SaveField(FieldARequest) returns (FieldAResponse);
}

message FieldARequest {
  string name = 1;
}

message FieldAResponse {
  bool success = 1;
}