syntax = "proto3";

option java_package = "com.example.grpc.proto";
option java_multiple_files = true;

service FieldCService {
  rpc SaveField(FieldCRequest) returns (FieldCResponse);
}

message FieldCRequest {
  bool active = 1;
}

message FieldCResponse {
  bool success = 1;
}
